--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "NODE_ENV=development npm run build-css && pm2 start server/server.js &",
     "copy-assets": "rm -rf server/public/images && cp -r server/images server/public/images &",
     "build-css": "rm -rf server/public/css && node_modules/node-sass/bin/node-sass --include-path server/scss server/scss/main.scss server/public/css/main.css --output-style compressed &",
-    "debug:dev": "node --inspect server/server.js &",
+    "debug:dev": "NODE_ENV=development npm run build-css && node --inspect server/server.js &",
     "prod:build": "npm run build-css && npm run copy-assets & node_modules/webpack/bin/webpack.js --config webpack.config.prod.js --mode production &",
     "prod": "NODE_ENV=production npm run prod:build && pm2 start server/prodServer.js &",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -69,7 +69,7 @@
     "file-loader": "^4.2.0",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.9.0",
-    "node-sass": "^4.13.1",
+    "node-sass": "^4.14.1",
     "redux": "^4.0.0",
     "redux-immutable-state-invariant": "^2.1.0",
     "sass-loader": "^7.0.3",
